--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,9 @@
 <html lang="en">
-  <head></head>
+  <head>
+    <script src="updateLoc.js"></script> 
+  </head>
   <body>
     <h1>Test</h1>
   </body>
 </html>
+
