--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,12 @@
   </head>
   <body>
     <h1>Test</h1>
+    <form action="/login.html">
+      <input type="submit" value="Login" />
+    </form>
+    <form action="/register.html">
+      <input type="submit" value="Register" />
+    </form>
   </body>
 </html>
 
