--- a/HackRPI2019/one.html
+++ b/HackRPI2019/one.html
@@ -55,9 +55,12 @@ body {
                     <img border="0" alt="W3Schools" src="placeholder.png" width="200" height="200" class="center">
                 </a>-->
             
-        <div class ="setting">
-            <img src="setting_border.png" >
-            <img src="setting_cog.png" width="100" height="100" class = "cog"/>
-        </div>
+            <a href="setting.html">
+                <img src="setting_cog.png" width="100" height="100" class = "cog"/>
+            </a>
+
+            <a href="index.html">
+                    <img border="0" alt="W3Schools" src="arrow_back.png" width="100" height="100" class="return">
+        </a>
     </body>
 </html>
