--- a/HackRPI2019/two.html
+++ b/HackRPI2019/two.html
@@ -8,11 +8,14 @@
 
         <p style = "color:white;">This is the second test page</p>
 
-        <p>
-        An image as a link: <a href="http://localhost:8000/HackRPI2019/index.html">
-        <img border="0" alt="W3Schools" src="placeholder.png" width="400" height="400">
+        
+        <a href="http://localhost:8000/HackRPI2019/index.html">
+          <img border="0" alt="W3Schools" src="placeholder_2.png" width="400" height="400">
         </a>
-        </p>
+        <a href="http://localhost:8000/HackRPI2019/index.html">
+          <img border="0" alt="W3Schools" src="placeholder_2.png" width="400" height="400">
+        </a>
+        
 
   </body>
 </html>
