Added back button

--- a/HackRPI2019/one.html
+++ b/HackRPI2019/one.html
@@ -44,11 +44,11 @@ body {
 
         <h1>Service_Name</h1>
 
-        <p>Description goes here.</p>
+        <p>This service is designed to aid rescue efforts in the event of a severe natural disaster. When notified of a coming threat, the program will periodically send a user's location information to a secure, third party server. This information is then used to locate the user if they become stuck in the aftermath.</p>
 
         
                 <a href="http://localhost:8000/HackRPI2019/two.html">
-                    <img border="0" alt="W3Schools" src="placeholder.png" width="200" height="20" class="center">
+                    <img border="0" alt="W3Schools" src="placeholder_2.png" width="200" height="20" class="center">
                 </a>
             
                 <!--<a href="http://localhost:8000/HackRPI2019/three.html">
