--- a/HackRPI2019/five.html
+++ b/HackRPI2019/five.html
@@ -32,7 +32,7 @@ body {
 }
 </style>
   <body>        
-    <a href="http://localhost:8000/HackRPI2019/index.html">
+    <a href="index.html">
       <img border="0" alt="W3Schools" src="placeholder_2.png" width="400" height="400">
     </a>
         
