--- a/HackRPI2019/index.html
+++ b/HackRPI2019/index.html
@@ -50,7 +50,7 @@ body {
                 <br>
                 <br>
             
-                <a href="http://localhost:8000/HackRPI2019/two.html">
+                <a href="two.html">
                     <img border="0" alt="W3Schools" src="placeholder.png"class="center">
                 </a>
             
