--- a/HackRPI2019/two.html
+++ b/HackRPI2019/two.html
@@ -9,10 +9,10 @@
         <p style = "color:white;">This is the second test page</p>
 
         
-        <a href="http://localhost:8000/HackRPI2019/index.html">
+        <a href="index.html">
           <img border="0" alt="W3Schools" src="placeholder_2.png" width="400" height="400">
         </a>
-        <a href="http://localhost:8000/HackRPI2019/index.html">
+        <a href="index.html">
           <img border="0" alt="W3Schools" src="placeholder_2.png" width="400" height="400">
         </a>
         
