--- a/HackRPI2019/setting.html
+++ b/HackRPI2019/setting.html
@@ -4,15 +4,13 @@
   </head>
 
   <body style = "background-color:black;">
-        <h1 style = "color:white;">My First Heading</h1>
+    <h1 style = "color:white;">My First Heading</h1>
 
-        <p style = "color:white;">This is the third test page</p>
+    <p style = "color:white;">This is the third test page</p>
 
-        <p>
-        An image as a link: <a href="http://localhost:8000/HackRPI2019/index.html">
-        <img border="0" alt="W3Schools" src="placeholder.png" width="400" height="400">
-        </a>
-        </p>
+    <a href="index.html">
+      <img border="0" alt="W3Schools" src="placeholder.png" width="400" height="400">
+    </a>
 
   </body>
 </html>
