--- a/HackRPI2019/one.html
+++ b/HackRPI2019/one.html
@@ -42,9 +42,11 @@ body {
         <form id="form1" runat="server">
         </form>
 
-        <h1>Service_Name</h1>
+        <h1>Quake Alert</h1>
 
-        <p>This service is designed to aid rescue efforts in the event of a severe natural disaster. When notified of a coming threat, the program will periodically send a user's location information to a secure, third party server. This information is then used to locate the user if they become stuck in the aftermath.</p>
+        <div class="box-1">
+          <p>This service is designed to aid rescue efforts in the event of a severe natural disaster. When notified of a coming threat, the program will periodically send a user's location information to a secure, third party server. This information is then used to locate the user if they become stuck in the aftermath.</p>
+        </div>
 
         
                 <a href="http://localhost:8000/HackRPI2019/two.html">
