--- a/HackRPI2019/two.html
+++ b/HackRPI2019/two.html
@@ -42,9 +42,25 @@
   }
   </style>
   <body>
-        <h1>Registration</h1>
+        <h1 style="font-size:200%;">Registration</h1>
+        <form style="font-size:200%;">
+          First name:
+          <input  style="font-size:100%;" type="text" name="firstname">
+          <br>
+          Last name:
+          <input  style="font-size:100%;" type="text" name="lastname">
+        
 
-
+        <p style="font-size:100%;">Select radius:</p>
+        <select style="font-size:100%;" name="radius">
+          <option value="5km">5km</option>
+          <option value="10km">10km</option>
+          <option value="20km">20km</option>
+          <option value="50km">50km</option>
+        </select>
+        <br><br>
+        <input type="submit" value="Submit">
+        </form>
 
         <a href="setting.html">
             <img src="setting_cog.png" width="100" height="100" class = "cog"/>
