registration set up

--- a/HackRPI2019/two.html
+++ b/HackRPI2019/two.html
@@ -49,6 +49,9 @@
           <br>
           Last name:
           <input  style="font-size:100%;" type="text" name="lastname">
+          <br>
+          Phone Number:
+          <input  style="font-size:100%;" type="text" name="phonenumber">
         
 
         <p style="font-size:100%;">Select radius:</p>
@@ -59,8 +62,12 @@
           <option value="50km">50km</option>
         </select>
         <br><br>
-        <input type="submit" value="Submit">
+        <!--<input type="submit" value="Submit">-->
         </form>
+
+        <a href="five.html">
+            <img src="register.png" width="100" class = "center"/>
+        </a>
 
         <a href="setting.html">
             <img src="setting_cog.png" width="100" height="100" class = "cog"/>
