--- a/HackRPI2019/index.html
+++ b/HackRPI2019/index.html
@@ -37,7 +37,7 @@ body {
         <form id="form1" runat="server">
         </form>
 
-        <h1>Working_Title</h1>
+        <h1>Quake Alert</h1>
      
                 <div class="box-1">
                     
