--- a/HackRPI2019/login.html
+++ b/HackRPI2019/login.html
@@ -16,5 +16,6 @@
         <input type="submit" value="Log In"/>
     </div>
 </form>
+<a href="/register.html">Click here to register</a>
 </body>
 </html>
