--- a/HackRPI2019/setting.html
+++ b/HackRPI2019/setting.html
@@ -2,15 +2,54 @@
 <html>
   <head>
   </head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+  .center {
+      display: block;
+      margin: auto;
+      width: 40%;
+  }
+  * {
+      box-sizing: border-box;  
+  }
+  .return
+  {
+      position: absolute;
+      bottom: 0;
+      left: 10px;
+      max-width: 65px;
+  }
+  .cog
+  {
+      position: absolute;
+      bottom: 0;
+      right: 10px;
+      max-width: 65px;
+  }
+  img {
+      width: 100%;
+      height: auto;
+  }
+  body {
+      background: url('Faultline4.png') no-repeat center center fixed; 
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+  }
+  </style>
+  <body>
+    <h1 style="font-size:200%;">Settings</h1>
 
-  <body style = "background-color:black;">
-    <h1 style = "color:white;">My First Heading</h1>
-
-    <p style = "color:white;">This is the third test page</p>
-
+    <p style="font-size:200%;">Select radius:</p>
+    <select style="font-size:200%;" name="radius">
+      <option value="5km">5km</option>
+      <option value="10km">10km</option>
+      <option value="20km">20km</option>
+      <option value="50km">50km</option>
+    </select>
     <a href="index.html">
-      <img border="0" alt="W3Schools" src="placeholder.png" width="400" height="400">
+      <img border="0" alt="W3Schools" src="arrow_back.png" width="100" height="100" class="return"/>
     </a>
-
   </body>
 </html>
