--- a/HackRPI2019/five.html
+++ b/HackRPI2019/five.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="file.css">
   </head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
@@ -38,7 +39,11 @@ body {
     background-size: cover;
 }
 </style>
-  <body>            
+  <body>   
+    <h1>Quake Alert</h1>         
+    <div class="box-1">
+          <p>Registration complete! To continue using Quake Alert, please return to the home page.</p>
+        </div>
     <a href="index.html">
         <img border="0" alt="W3Schools" src="arrow_back.png" width="100" height="100" class="return"/>
     </a>
