--- a/HackRPI2019/two.html
+++ b/HackRPI2019/two.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="file.css">
   </head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
@@ -42,31 +43,33 @@
   }
   </style>
   <body>
-        <h1 style="font-size:200%;">Registration</h1>
-        <form style="font-size:200%;">
-          First name:
-          <input  style="font-size:100%;" type="text" name="firstname">
-          <br>
-          Last name:
-          <input  style="font-size:100%;" type="text" name="lastname">
-          <br>
-          Phone Number:
-          <input  style="font-size:100%;" type="text" name="phonenumber">
+        <h1>Registration</h1>
+        <div class="box-1">
+            <form style="font-size:200%; font-family: Arial;">
+            First name:
+            <input  style="font-size:100%;", style="font-family: Arial" type="text" name="firstname">
+            <br>
+            Last name:
+            <input  style="font-size:100%;" type="text" name="lastname">
+            <br>
+            Phone Number:
+            <input  style="font-size:100%;" type="text" name="phonenumber">
         
 
-        <p style="font-size:100%;">Select radius:</p>
-        <select style="font-size:100%;" name="radius">
-          <option value="5km">5km</option>
-          <option value="10km">10km</option>
-          <option value="20km">20km</option>
-          <option value="50km">50km</option>
-        </select>
-        <br><br>
-        <!--<input type="submit" value="Submit">-->
-        </form>
+          <p style="font-size:100%;">Select radius:</p>
+          <select style="font-size:100%;" name="radius">
+           <option value="5km">5km</option>
+           <option value="10km">10km</option>
+           <option value="20km">20km</option>
+           <option value="50km">50km</option>
+          </select>
+          <br><br>
+          <!--<input type="submit" value="Submit">-->
+          </form>
+        </div>
 
         <a href="five.html">
-            <img src="register.png" width="100" class = "center"/>
+            <img src="register.png" class = "register"/>
         </a>
 
         <a href="setting.html">
