FInal Drafts of Web Pages

--- a/HackRPI2019/two.html
+++ b/HackRPI2019/two.html
@@ -44,7 +44,7 @@
   </style>
   <body>
 
-        <h1>Registration</h1>
+        <h1>Emergency Contact Registration</h1>
         <div class="box-1">
             <form style="font-size:200%; font-family: Arial;">
             First name:
@@ -57,7 +57,7 @@
             <input  style="font-size:100%;" type="text" name="phonenumber">
         
 
-          <p style="font-size:100%;">Select radius:</p>
+          <p style="font-size:100%;">Select radius (proximity required before alerting emergenct contact):</p>
           <select style="font-size:100%;" name="radius">
            <option value="5km">5km</option>
            <option value="10km">10km</option>
@@ -69,21 +69,7 @@
           </form>
         </div>
 
-        <h1 style="font-size:250%;">Registration</h1>
-        <form style="font-size:200%;">
-          First name:
-          <input  style="font-size:100%;" type="text" name="firstname">
-          <br>
-          Last name:
-          <input  style="font-size:100%;" type="text" name="lastname">
-          <br>
-          Phone Number:
-          <input  style="font-size:100%;" type="text" name="phonenumber">
         
-
-        <br><br>
-        <!--<input type="submit" value="Submit">-->
-        </form>
 
 
         <a href="five.html">
