--- a/HackRPI2019/five.html
+++ b/HackRPI2019/five.html
@@ -49,6 +49,8 @@ body {
     </a>
 
         
-    <img src="setting_cog.png" width="100" height="100" class = "cog"/>
+        <a href="setting.html">
+            <img src="setting_cog.png" width="100" height="100" class = "cog"/>
+        </a>
   </body>
 </html>
