--- a/HackRPI2019/setting.html
+++ b/HackRPI2019/setting.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="file.css">
   </head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
@@ -39,7 +40,7 @@
   }
   </style>
   <body>
-    <h1 style="font-size:200%;">Settings</h1>
+    <h1>Settings</h1>
 
     <p style="font-size:200%;">Select radius:</p>
     <select style="font-size:200%;" name="radius">
