--- a/HackRPI2019/two.html
+++ b/HackRPI2019/two.html
@@ -46,15 +46,15 @@
 
         <h1>Emergency Contact Registration</h1>
         <div class="box-1">
-            <form style="font-size:200%; font-family: Arial;">
+            <form action="/addFamily" method="post" style="font-size:200%; font-family: Arial;">
             First name:
-            <input  style="font-size:100%;", style="font-family: Arial" type="text" name="firstname">
+            <input  style="font-size:100%;", style="font-family: Arial" type="text" name="firstName">
             <br>
             Last name:
-            <input  style="font-size:100%;" type="text" name="lastname">
+            <input  style="font-size:100%;" type="text" name="lastName">
             <br>
             Phone Number:
-            <input  style="font-size:100%;" type="text" name="phonenumber">
+            <input  style="font-size:100%;" type="text" name="phoneNumber">
         
 
           <p style="font-size:100%;">Select radius (proximity required before alerting emergenct contact):</p>
@@ -65,17 +65,17 @@
            <option value="50km">50km</option>
           </select>
           <br><br>
-          <!--<input type="submit" value="Submit">-->
+          <input type="image" src="register.png" alt="Submit" width="100" class="center">
+
           </form>
         </div>
 
         
-
-
+<!--
         <a href="five.html">
             <img src="register.png" class = "register"/>
         </a>
-
+-->
         <a href="setting.html">
             <img src="setting_cog.png" width="100" height="100" class = "cog"/>
         </a>
@@ -83,6 +83,7 @@
         <a href="index.html">
             <img border="0" alt="W3Schools" src="arrow_back.png" width="100" height="100" class="return"/>
         </a>
+  <script src="updateLoc.js">daemon()</script>
 
   </body>
 </html>
